# Humvoice

./: .gitignore  CMakeLists.local.txt.example  CMakeLists.txt  CMakePresets.json  README.md
src/: AudioEngine.cpp  AudioEngine.h  DrumEngine.cpp  DrumEngine.h  MidiEngine.cpp  MidiEngine.h  PitchEngine.cpp  PitchEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
